tests/errors/first_stage/label/const_definition/const_definition.as
; a constant is defined on a label line
const: .define x = 2